2007-06 - GDA 1.3 support added (with backwards compatiblity to 1.2)
2007-06 - Ubuntu 7.04 x86_64 support
2007-06 - gcc 4.1.2 support (more pedantic)
2007-11 - RHEL 5 x86_64 support
2008-01 - Python <2.5 support
2008-01 - flowid module: bugfix
2008-01 - Don't warn (ala -q) when testing for existance of a field and it doesn't exist
2008-01 - Print column number in parse error messages

VERSION 2.5 - 29 August 2006
============================
2006-08 - print module: syslog options
2006-08 - ipproto type: fixed printing as text instead of numeric (e.g. tcp instead of 6), added double field
2006-08 - sort module now sorts numerically whenever possible, handles multiple dimensions better, -r for reverse order
2006-07 - new modules: take, deskew
2006-07 - Date/Time parsers now support Unix epoch time strings
2006-07 - Default time output format is now RFC 3339 (a profile of ISO 8601)
2006-06 - pcapwrite (via StrucioWriter.h):
	- now substitues %T in a filename with the current timestamp
	- can rotate files by current time as well as size
2006-06 - Switched from gmodule to ltdl
2006-06 - Experimental: Processing can now be multithreaded with multilpe worker threads (smacqq -c)
2006-06 - Less forceful inlining (optimize code size rather than function calls)
2005-05 - Make -j# works 

VERSION 2.4 - 3 May 2006
========================
2006-05 - bug fix: pcapfile and cflow not closing file descriptors
2006-04 - bug fix: memory usage was higher than necessary and output was delayed because scheduler was too greedy about producing when it could consume
2006-02 - bug fix: file is Greedy consumer
2006-02 - bug fix: file -F 

VERSION 2.3 - 22 February 2006
==============================
2006-02 - ethereal updates (use new libethereal)
2005-12 - ported to gcc 4.0
2005-11 - Gasnet/UPC support begun; distribute module added
2005-10	- bytes.string conversion now hex escapes unprintables
2005-10 - packet.payload had incorrect size