@@ -13,6 +13,7 @@ VERSION 2.6 - Future
 2008-01 - flowid module: bugfix
 2008-01 - Don't warn (ala -q) when testing for existance of a field and it doesn't exist
 2008-01 - Print column number in parse error messages
+2008-01 - pcaplive: Support 64-bit timeval (RHEL5 x86-64)
 
 VERSION 2.5 - 29 August 2006
 ============================
